<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:id="@+id/editText1"
        android:layout_gravity="center_horizontal" />

    <android.support.design.widget.TextInputEditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textAlignment="center"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/login"
        android:id="@+id/button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:elevation="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView2" />

</LinearLayout>