<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.shipoya.shipoya.HomepageActivity"
    tools:showIn="@layout/app_bar_homepage">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey"
            android:padding="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:elevation="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView1"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_local_shipping_white_48dp"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/get_truck"
                android:textAppearance="@style/style_text_homepage"
                android:id="@+id/button1"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:clickable="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey"
            android:padding="16dp"
            android:layout_row="0"
            android:layout_column="2"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:elevation="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_receipt_white_48dp"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/view_quotes"
                android:textAppearance="@style/style_text_homepage"
                android:id="@+id/button2"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:clickable="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey"
            android:layout_marginTop="15dp"
            android:padding="16dp"
            android:layout_row="1"
            android:layout_column="0"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:elevation="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_style_white_48dp"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/view_orders"
                android:textAppearance="@style/style_text_homepage"
                android:id="@+id/button3"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:clickable="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey"
            android:layout_marginTop="15dp"
            android:padding="16dp"
            android:layout_row="1"
            android:layout_column="2"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:elevation="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_payment_white_48dp"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/view_invoices"
                android:textAppearance="@style/style_text_homepage"
                android:id="@+id/button4"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:clickable="true" />
        </LinearLayout>
    </GridLayout>

</RelativeLayout>
